@@ -403,17 +403,6 @@
                      or no, to import deleted entries
      2016- 3- 1 +accounts: import balances
 
- 986 2016- 2-13 FEAT after having validated a first operation, the ope
-                     date is left on the dialog, but is considered as
-                     invalid - see trash/bug986
-                     + and/or review what actually happens after operation
-                     validation: for now, only locked fields are reset
-                     (because we are sure that locked fields are automatically
-                     computed), but some automatically computed fields are 
-                     not locked, and so are not reset (but should)
-     2016- 2-23 current behavior is not so bad - but operation date is
-                checked invalid even if it appears as valid
-
  999 2016- 2-24 FEAT add a Close button to detached nomodal pages
 
 1003 2016- 2-24 FEAT RenderPage: add navigation+zoom buttons
@@ -794,6 +783,19 @@
                      non-conciliated entries, but should also print
                      unconciliated bat lines (or an empty set)
      2016- 3-13 fixed
+
+ 986 2016- 2-13 BUG  after having validated a first operation, the ope
+                     date is left on the dialog, but is considered as
+                     invalid - see trash/bug986
+                     + and/or review what actually happens after operation
+                     validation: for now, only locked fields are reset
+                     (because we are sure that locked fields are automatically
+                     computed), but some automatically computed fields are 
+                     not locked, and so are not reset (but should)
+     2016- 2-23 current behavior is not so bad - but operation date is
+                checked invalid even if it appears as valid
+     2016- 3-23 status changed from FEAT to BUG
+     2016- 3-23 fixed
 
  987 2016- 2-13 PWI  delete LOYAVR operation (duplicate of AVRLOY)
      2016- 2-14 done
