@@ -43,6 +43,7 @@
    - ofaDossierNewMini: fix dialog display at initialization time.
    - ofaExportAssistant: display the chosen string delimiter.
    - ofaExportAssistant: fix amounts export format.
+   - ofaGuidedInput: reset the dialog after entries generation (todo #986).
    - ofaIDBConnect: setup admin credentials when restoring a database.
    - ofoTVAForm: fix ofo_tva_form_get_is_deletable() method.
 
